    - Remove the const specifier for the additionnal parameter of fast foreach.

  * Edit map module
    - Remove the need of using bunny_thread_wait_completion after a fast foreach.
    - Remove the const specifier for the additionnal parameter of fast foreach.
    - Send the entire node when using foreach insteda of the value only, so the key
      is also available.

  * Edit thread module
    - Remove the const specifier in threa_foreach and thread_push for the additional
      parameter.
    - Add asynchronous computation functions linked to the bunny loop event resolver.

  * Edit configuration module
    - Switch from having a "@" node inside bunny_configuration to store field in the
      default scope for INI format to simply act intelligently to recognize those who
      are in the default scope.
    - Edit bunny_configuration_access on string to make it call go_get_node instead of
      get_child and so handle address as parameter.
    - Edit bunny_configuration_go_get_* so they can now use a value from another
      field with the operator [] in addr. For example: node.Field[node.case].
    - Edit INI parser so scopes can now use full address as name instead of simple
      fieldname, breaking the depth limitation of INI.
    - Add CSV support.
    - Add support in DABSIC parser for functions, parameters, variables, loops, ifs,
      etc. Making it a real programming language. Support for hashmap and arrays.
      Reference are currently supported but *cannot be written*.
    - Extend PATH when using @insert and @include.
    - Handle directories in @insert and @include to load all non hidden files
      with valid extensions.
    - Add functions to manually extend or shrink path (push_path, pop_path).
    - Add DABSIC Sequence support.
    - Add LUA data structure support.
    - Add JSON support.
    - Add XML support.
    - Add LISP syntax support.

  * Edit network module
    - Rename t_bunny_error to t_bunny_network_error. **Compatibility break!**