@@ -1,0 +1,38 @@
+<div class="prototype">
+  $Tsize_t@ $Sbunny_map_clear@(
+  $Tt_bunny_map@ *$Smap@
+  );
+</div>
+<hr />
+
+<div class="resume">
+  <h3>Description</h3>
+  $A Clear the content the sent map node. Returns how many elements there was inside.
+</div>
+<hr />
+
+<div class="parameters">
+  <h3>Parameters</h3>
+  <ul>
+    <li>
+      $Tt_bunny_map@ *$Smap@:<br />
+      $A The map to clear.
+    </li>
+  </ul>
+</div>
+<hr />
+
+<div class="return">
+  <h3>Return value</h3>
+  <p>This functions returns how many elements there was inside the map.</p>
+</div>
+<hr />
+
+<div class="related_functions">
+  <h3>Related functions</h3>
+  <ul>
+    <li>t_bunny_map</li>
+    <li>bunny_delete_map</li>
+  </ul>
+</div>
+
